# licensor

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: package.yaml
cmd/cli/: cli.go
cmd/licensor-api/: main.go
domain/: customer.go  key.go  license.go  management_user.go  tenant.go  user.go
migrations/licensor_db/: 001_create_management_schema.sql  002_create_application_schema.sql  003_create_extensions.sql  004_create_management_user.sql  005_create_tenant.sql  006_create_user.sql  007_create_license.sql  008_create_customer.sql  tern.conf
migrations/management_db/: 001_create_tenant.sql  002_create_management_users.sql
mock/: management_mock.go  tenant_mock.go
models/: database_models.go
pkg/apiserver/: apiserver.go
pkg/config/: appconfig.go  dbconfig.go
pkg/db_conn_details/: db_conn_details.go
pkg/db_connector/: db_connector.go
pkg/dbconfig/: dbconfig.go
pkg/httputils/: httputils.go
pkg/keygen/: apikey.go  keygen.go
pkg/licensing/: licensing.go  licensing_test.go
pkg/management/: service.go  service_test.go
pkg/management/delivery/http/: management.go  request.go
pkg/management/repository/postgresql/: management_repo.go
pkg/mgmt_db/: mgmt_db.go
pkg/tenant/: service.go  service_test.go
pkg/tenant/delivery/http/: request.go  tenant.go
pkg/tenant/repository/postgresql/: tenant_repo.go
pkg/tenant_db/: tenant_db.go
pkg/user/: service.go  service_test.go
pkg/user/delivery/http/: request.go  user.go
pkg/user/repository/postgresql/: user_repo.go
postman_collection/: Licensor API.postman_collection.json
scripts/curl/admin/: get_requests.sh  post_requests.sh
src/storage/: database.py  models.py
src/utils/: config.py
tests/: test_utils_config.py
