[tool.poetry]
name = "licensor"
version = "0.1.0"
description = "An opensource SAAS licensing tool."
authors = ["James Washington <jwashington104.jw@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
SQLAlchemy = "^2.0.8"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
